# solid-axum-template

./: Cargo.toml  README.md  build.rs  index.html
src/: main.rs
